# latam-economic-pulse

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dbt-docs.yml  pipeline.yml
dbt/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: _marts.yml  dim_country.sql  dim_indicator.sql  fct_indicators.sql  mart_latest_indicators.sql
dbt/models/staging/: _staging.yml  stg_wb_countries.sql  stg_wb_observations.sql
dbt/seeds/: _seeds.yml  indicator_metadata.csv
scripts/: parse_database_url.py
sql/: bootstrap.sql
src/api/: database.py  main.py  schemas.py  services.py
src/api/routers/: indicators.py  stats.py
src/el/: extract.py  load.py  pipeline.py
src/models/: schemas.py
tests/: test_api.py  test_extract.py  test_load.py  test_parse_database_url.py
